[+] added ideologies and themes